--- a/UIKit/SafariQuizApp 3/SafariQuizApp 3/Base.lproj/Main.storyboard
+++ b/UIKit/SafariQuizApp 3/SafariQuizApp 3/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="iPad13_0rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
+    <device id="retina6_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
@@ -12,13 +12,13 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SafariQuizApp_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1032" height="1376"/>
+                        <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lion" translatesAutoresizingMaskIntoConstraints="NO" id="VgO-bv-FdQ">
-                                <rect key="frame" x="0.0" y="24" width="1032" height="688"/>
+                                <rect key="frame" x="0.0" y="124" width="440" height="210"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="210" id="WkL-3Z-1FT"/>
                                 </constraints>
@@ -34,13 +34,13 @@
                                 </variation>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="enK-Rp-QZL">
-                                <rect key="frame" x="943.5" y="735" width="63.5" height="21"/>
+                                <rect key="frame" x="351.66666666666669" y="357" width="63.333333333333314" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ALk-Og-4BS">
-                                <rect key="frame" x="696" y="811" width="309.5" height="60"/>
+                                <rect key="frame" x="25" y="573" width="390" height="50"/>
                                 <color key="backgroundColor" systemColor="tintColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="TfL-aa-ksX"/>
@@ -67,7 +67,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wir-fQ-36i">
-                                <rect key="frame" x="361" y="811" width="310" height="60"/>
+                                <rect key="frame" x="25" y="498" width="390" height="50"/>
                                 <color key="backgroundColor" systemColor="tintColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="pA9-BH-bF2"/>
@@ -94,7 +94,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Sb-tj-fmk">
-                                <rect key="frame" x="26.5" y="811" width="309.5" height="60"/>
+                                <rect key="frame" x="25" y="423" width="390" height="50"/>
                                 <color key="backgroundColor" systemColor="tintColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="M4d-Wb-RLn"/>
@@ -214,10 +214,10 @@
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
                             <mask key="constraints">
-                                <include reference="cfO-BA-PI9"/>
-                                <exclude reference="Pb7-59-RFd"/>
-                                <exclude reference="uqx-ie-kj7"/>
                                 <exclude reference="vkN-1Y-Mzm"/>
+                                <include reference="cfO-BA-PI9"/>
+                                <exclude reference="uqx-ie-kj7"/>
+                                <exclude reference="Pb7-59-RFd"/>
                                 <include reference="nBr-tw-lsO"/>
                                 <include reference="MZ3-5W-23k"/>
                                 <include reference="dJ1-rd-1qb"/>
