--- a/UIKit/ToDoList 12/ToDoList 12/NewTaskModalView.xib
+++ b/UIKit/ToDoList 12/ToDoList 12/NewTaskModalView.xib
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="NewTaskModalView" customModule="ToDoList_12" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="571" height="469"/>
+            <rect key="frame" x="0.0" y="0.0" width="571" height="410"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Task" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k56-Ej-6uE">
@@ -40,7 +40,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdz-xp-FY6">
-                    <rect key="frame" x="25" y="202.33333333333334" width="59" height="16"/>
+                    <rect key="frame" x="25" y="207.33333333333334" width="59" height="16"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -56,13 +56,13 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hhf-bU-jRy">
-                    <rect key="frame" x="25" y="228.33333333333337" width="521" height="90"/>
+                    <rect key="frame" x="25" y="233.33333333333337" width="521" height="90"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="90" id="BF6-VR-RzO"/>
                     </constraints>
                 </pickerView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FWo-WD-hc5">
-                    <rect key="frame" x="25" y="348.33333333333331" width="521" height="40"/>
+                    <rect key="frame" x="25" y="343.33333333333331" width="521" height="40"/>
                     <color key="backgroundColor" systemColor="linkColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="ABS-aM-gTU"/>
@@ -82,12 +82,12 @@
             <constraints>
                 <constraint firstItem="Bdz-xp-FY6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="25" id="BbI-np-2hR"/>
                 <constraint firstItem="9l9-Iy-Oh5" firstAttribute="top" secondItem="nc5-lC-Ash" secondAttribute="bottom" constant="10" id="BdC-by-i1g"/>
-                <constraint firstItem="FWo-WD-hc5" firstAttribute="top" secondItem="Hhf-bU-jRy" secondAttribute="bottom" constant="30" id="C5m-Zd-rfO"/>
+                <constraint firstItem="FWo-WD-hc5" firstAttribute="top" secondItem="Hhf-bU-jRy" secondAttribute="bottom" constant="20" id="C5m-Zd-rfO"/>
                 <constraint firstItem="nc5-lC-Ash" firstAttribute="top" secondItem="k56-Ej-6uE" secondAttribute="bottom" constant="20" id="D6k-3u-HH5"/>
                 <constraint firstItem="FWo-WD-hc5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="25" id="Ivd-He-tSY"/>
                 <constraint firstItem="k56-Ej-6uE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="SNM-35-mjD"/>
                 <constraint firstAttribute="trailing" secondItem="lhP-QE-Q0L" secondAttribute="trailing" constant="25" id="Y6h-1N-8i0"/>
-                <constraint firstItem="Bdz-xp-FY6" firstAttribute="top" secondItem="9l9-Iy-Oh5" secondAttribute="bottom" constant="10" id="a9m-vl-HFN"/>
+                <constraint firstItem="Bdz-xp-FY6" firstAttribute="top" secondItem="9l9-Iy-Oh5" secondAttribute="bottom" constant="15" id="a9m-vl-HFN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="9l9-Iy-Oh5" secondAttribute="trailing" constant="25" id="aiI-gv-b3N"/>
                 <constraint firstItem="k56-Ej-6uE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="30" id="c2u-Sw-vt7"/>
                 <constraint firstItem="Hhf-bU-jRy" firstAttribute="top" secondItem="Bdz-xp-FY6" secondAttribute="bottom" constant="10" id="gUi-Kn-JTl"/>
@@ -104,7 +104,15 @@
                 <outlet property="descriptionTxtView" destination="9l9-Iy-Oh5" id="ZiO-sF-eNW"/>
                 <outlet property="submitBtn" destination="FWo-WD-hc5" id="IkL-Wh-vQA"/>
             </connections>
-            <point key="canvasLocation" x="145.80152671755724" y="141.90140845070422"/>
+            <point key="canvasLocation" x="145.80152671755724" y="99.295774647887328"/>
+        </view>
+        <view contentMode="scaleToFill" id="TZl-sH-gIA">
+            <rect key="frame" x="0.0" y="0.0" width="542" height="419"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <viewLayoutGuide key="safeArea" id="BhY-84-G4h"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="1213.7404580152672" y="103.16901408450705"/>
         </view>
     </objects>
     <resources>
