--- a/UIKit/ToDoList 12/ToDoList 12/Base.lproj/Main.storyboard
+++ b/UIKit/ToDoList 12/ToDoList 12/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -74,33 +75,50 @@
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjf-Ym-e6u">
-                                                            <rect key="frame" x="20" y="47" width="303" height="20.333333333333329"/>
+                                                            <rect key="frame" x="20" y="55.000000000000007" width="297.33333333333331" height="20.333333333333336"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10/10/2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6fU-tm-aTh">
-                                                            <rect key="frame" x="20" y="77.333333333333329" width="68" height="16"/>
+                                                            <rect key="frame" x="20" y="85.333333333333329" width="68" height="16"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6gJ-pR-ISh">
-                                                            <rect key="frame" x="328" y="47.666666666666664" width="20" height="18.999999999999993"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6gJ-pR-ISh">
+                                                            <rect key="frame" x="322.33333333333331" y="52.333333333333314" width="25.666666666666686" height="25.666666666666686"/>
+                                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <imageReference key="image" image="circle" catalog="system" symbolScale="large"/>
                                                         </imageView>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xuQ-qb-uYz">
+                                                            <rect key="frame" x="314" y="9" width="34" height="34"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="34" id="08S-8Y-eey"/>
+                                                                <constraint firstAttribute="height" constant="34" id="Ob3-H0-VHI"/>
+                                                            </constraints>
+                                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                            <state key="normal" backgroundImage="circles.grid.svg"/>
+                                                            <connections>
+                                                                <action selector="editTaskBtnClicked:" destination="R9g-mh-nrq" eventType="touchUpInside" id="ZCv-hG-caa"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="6fU-tm-aTh" firstAttribute="top" secondItem="Fjf-Ym-e6u" secondAttribute="bottom" constant="10" id="1l2-pU-FeB"/>
                                                         <constraint firstAttribute="trailing" secondItem="6gJ-pR-ISh" secondAttribute="trailing" constant="10" id="8Cj-23-kYQ"/>
-                                                        <constraint firstItem="Fjf-Ym-e6u" firstAttribute="top" secondItem="Zuo-3p-RX7" secondAttribute="bottom" constant="10" id="AS1-Ak-r17"/>
+                                                        <constraint firstItem="Fjf-Ym-e6u" firstAttribute="top" secondItem="Zuo-3p-RX7" secondAttribute="bottom" constant="18" id="AS1-Ak-r17"/>
                                                         <constraint firstItem="Zuo-3p-RX7" firstAttribute="top" secondItem="oLT-do-r92" secondAttribute="top" constant="15" id="KUP-zr-rcV"/>
                                                         <constraint firstItem="Zuo-3p-RX7" firstAttribute="leading" secondItem="koN-KE-MMr" secondAttribute="trailing" constant="15" id="PY6-Om-qe4"/>
                                                         <constraint firstItem="6fU-tm-aTh" firstAttribute="leading" secondItem="koN-KE-MMr" secondAttribute="trailing" constant="15" id="Sm1-x0-5UF"/>
                                                         <constraint firstItem="6gJ-pR-ISh" firstAttribute="leading" secondItem="Fjf-Ym-e6u" secondAttribute="trailing" constant="5" id="TuH-I9-n4j"/>
                                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="6fU-tm-aTh" secondAttribute="bottom" constant="8" id="UQb-59-DsC"/>
                                                         <constraint firstItem="6gJ-pR-ISh" firstAttribute="centerY" secondItem="Fjf-Ym-e6u" secondAttribute="centerY" id="WQL-FE-ClG"/>
+                                                        <constraint firstItem="xuQ-qb-uYz" firstAttribute="centerY" secondItem="Zuo-3p-RX7" secondAttribute="centerY" id="bIH-Lt-cYc"/>
                                                         <constraint firstItem="koN-KE-MMr" firstAttribute="top" secondItem="oLT-do-r92" secondAttribute="top" id="dBh-Ed-8lh"/>
+                                                        <constraint firstAttribute="trailing" secondItem="xuQ-qb-uYz" secondAttribute="trailing" constant="10" id="hN6-l3-vsF"/>
                                                         <constraint firstAttribute="bottom" secondItem="koN-KE-MMr" secondAttribute="bottom" id="lBe-xo-ky8"/>
                                                         <constraint firstItem="koN-KE-MMr" firstAttribute="leading" secondItem="oLT-do-r92" secondAttribute="leading" id="mih-rN-p4m"/>
                                                         <constraint firstItem="Fjf-Ym-e6u" firstAttribute="leading" secondItem="koN-KE-MMr" secondAttribute="trailing" constant="15" id="tyJ-i0-eyu"/>
@@ -150,8 +168,9 @@
     </scenes>
     <resources>
         <image name="circle" catalog="system" width="128" height="123"/>
+        <image name="circles.grid.svg" width="46" height="46"/>
         <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
